--- a/pages/course/course_detail/course_detail.wxml
+++ b/pages/course/course_detail/course_detail.wxml
@@ -1,51 +1,4 @@
-<image  mode="scaleToFill" class='top_thumb' src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/course-detail-1.png'></image>
-
-<view class='title-box'>
-  <view class='name'>一级分类</view>
-  <view class='desc'>分类描述劳动关系协调师二级鉴定分类描述劳动关系协调师二级鉴定</view>
-</view>
-
-<view class='nav-box'>
-  <view class='nav-1'>名师亲授</view>
-  <view class='nav-2'>实战落地</view>
-  <view class='nav-3'>教练跟踪</view>
-  <view class='nav-4'>评估晋升</view>
-</view>
-
-<view style='height:20rpx; background:#f4f4f4;'></view>
-
-<view class='ctitle-box'>
-  <view class='name'>课列表</view>
-  <view class='desc'>(12)</view>
-</view>
-<view class='course-box'>
-   <navigator url=''>
-      <image  mode="scaleToFill" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/course-5.png'></image>
-      <view class='title'>摄影的基础与技巧</view>
-   </navigator>
-    <navigator url=''>
-      <image  mode="scaleToFill" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/course-6.png'></image>
-      <view class='title'>摄影的基础与技巧</view>
-   </navigator>
-   <navigator url=''>
-      <image  mode="scaleToFill" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/course-5.png'></image>
-      <view class='title'>摄影的基础与技巧</view>
-   </navigator>
-    <navigator url=''>
-      <image  mode="scaleToFill" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/course-6.png'></image>
-      <view class='title'>摄影的基础与技巧</view>
-   </navigator>
-   
-<view style="clear:both;height:0"></view>
-</view>
-
-
-<view style='height:20rpx; background:#f4f4f4;'></view>
-<view class='ctitle-box'>
-  <view class='name'>课程说明</view>
-</view>
-
 <view class='article-box'>
-<view class='text' style='margin-bottom:30rpx;'>艺术院校设计专业毕业， 名气影楼 工作室数码后期主管出身。精通人像处理软件，摄影知识丰富，在影楼后期样片研发上有丰富经验。</view>
-  <image class='thumb' mode="widthFix" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/course-detail-3.png'></image>
+  <view class='text' style='margin-bottom:30rpx;' wx:if="{{course.courseContent}}">{{course.courseContent}}</view>
+  <image wx:for="{{course.pisLs}}" wx:key="resId" class='thumb' mode="widthFix" style='display:flex;' src='{{item.picUrl}}'></image>
 </view>
