--- a/pages/tool/tool_index/tool_index.wxml
+++ b/pages/tool/tool_index/tool_index.wxml
@@ -1,39 +1,12 @@
 
 <view class='list-box'>
-  <view class='item-box'>
-    <image class='thumb'  mode="scaleToFill" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/5s-2.png'></image>
-    <view class='name'>抗磨剂</view>
-     <view class='address'>简介汽车发动机修复剂</view>
-    <view class='price'>12km</view>
-    <navigator url='../tool_pay/tool_pay' class='buy'>立即购买</navigator>
-  </view>
-  <view class='item-box'>
-    <image class='thumb'  mode="scaleToFill" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/5s-2.png'></image>
-    <view class='name'>抗磨剂</view>
-     <view class='address'>简介汽车发动机修复剂</view>
-    <view class='price'>12km</view>
-    <navigator url='../tool_pay/tool_pay' class='buy'>立即购买</navigator>
-  </view>
-  <view class='item-box'>
-    <image class='thumb'  mode="scaleToFill" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/5s-2.png'></image>
-    <view class='name'>抗磨剂</view>
-     <view class='address'>简介汽车发动机修复剂</view>
-    <view class='price'>12km</view>
-    <navigator url='../tool_pay/tool_pay' class='buy'>立即购买</navigator>
-  </view>
-  <view class='item-box'>
-    <image class='thumb'  mode="scaleToFill" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/5s-2.png'></image>
-    <view class='name'>抗磨剂</view>
-     <view class='address'>简介汽车发动机修复剂</view>
-    <view class='price'>12km</view>
-    <navigator url='../tool_pay/tool_pay' class='buy'>立即购买</navigator>
-  </view>
-  <view class='item-box'>
-    <image class='thumb'  mode="scaleToFill" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/5s-2.png'></image>
-    <view class='name'>抗磨剂</view>
-     <view class='address'>简介汽车发动机修复剂</view>
-    <view class='price'>12km</view>
-    <navigator url='../tool_pay/tool_pay' class='buy'>立即购买</navigator>
+
+  <view class='item-box' wx:for="{{products}}" wx:key="resId">
+    <image class='thumb'  mode="scaleToFill" src='{{item.coverPicUrl}}'></image>
+    <view class='name'>{{item.productName}}</view>
+     <view class='address'>{{item.productResume}}</view>
+    <view class='price'>¥{{item.productPriceTxt}}</view>
+    <navigator url='../tool_pay/tool_pay?productId={{item.resId}}' class='buy'>立即购买</navigator>
   </view>
 
 </view>
