--- a/pages/tool/tool_pay/tool_pay.wxml
+++ b/pages/tool/tool_pay/tool_pay.wxml
@@ -1,19 +1,18 @@
 <view class='main-box'>
 
-<view class="info-box">
-  <image class='thumb'  mode="widthFix" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/course-5.png'></image>
-  <view class='name'>一级分类</view>
-  <view class='desc'>分类描分分类描述类描述述</view>
-  <view class='price'>￥12.00</view>
-</view>
+  <view class="info-box">
+    <image class='thumb'  mode="widthFix" src='{{product.coverPicUrl}}'></image>
+    <view class='name'>{{product.productName}}</view>
+    <view class='desc'>{{product.productResume}}</view>
+    <view class='price'>￥{{product.productPrice}}</view>
+  </view>
 
-<view class='client-box'>
-<view class='client-title'>客户信息</view>
-</view>
-
-
+  <view class='client-box'>
+    <view class='client-title'>客户信息</view>
+  </view>
 
 </view>
+
 <view class='form-box'>
   <view class='item-box'>
     <label>收件人：</label>
@@ -25,7 +24,7 @@
   </view>
    <view class='item-box'>
     <label>地址：</label>
-     <input type='text' class='text'></input>
+    <input type='text' class='text'></input>
   </view>
 </view>
-<button class='pay-bnt'>立即支付</button>
+<button class='pay-bnt'>立即购买</button>
