--- a/pages/5s/5s_address/5s_address.wxss
+++ b/pages/5s/5s_address/5s_address.wxss
@@ -9,3 +9,27 @@ page{ background: #f2f2f2; padding-top: 16rpx;}
   background: url(https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/5s-11.png) 522rpx center no-repeat;
   background-size: 24rpx 13rpx;
 }
+
+
+.list-box{ background: #fff;}
+.list-box .item-box{ padding: 20rpx 30rpx; height: 200rpx; position: relative;
+  border-bottom: 1rpx solid #eeeeee;
+}
+
+.item-box .thumb{ display: block; width: 266rpx; height: 200rpx; border-radius: 10rpx; position: absolute; top: 20rpx; left: 30rpx;}
+.item-box .name{ font-size: 34rpx; color: #333333; font-weight: bold; position: absolute; top: 33rpx; line-height: 1; left: 326rpx;}
+
+.item-box .address{ font-size: 26rpx; color: #999999; position: absolute; top: 83rpx; line-height: 1.2; left: 326rpx; }
+
+.item-box .phone{  display: block; width: 120rpx; height: 50rpx; border: 1rpx solid #e95410; border-radius: 30rpx; position: absolute; right: 170rpx; top: 170rpx; font-size: 26rpx; color: #e95410; line-height: 50rpx; text-indent: 50rpx;
+background: url('https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/5s-3.png') 14rpx center no-repeat;
+background-size:28rpx; 
+}
+
+.item-box .map{  display: block; width: 120rpx; height: 50rpx; border: 1rpx solid #e95410; border-radius: 30rpx; position: absolute; right: 30rpx; top: 170rpx; font-size: 26rpx; color: #e95410; line-height: 50rpx; text-indent: 50rpx;
+background: url('https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/5s-4.png') 14rpx center no-repeat;
+background-size:28rpx; 
+}
+
+.item-box .juli{ color: #333333; font-size: 26rpx; line-height: 1; position: absolute; top: 184rpx; left: 326rpx;}
+
