--- a/pages/tool/tool_pay/tool_pay.wxml
+++ b/pages/tool/tool_pay/tool_pay.wxml
@@ -16,15 +16,16 @@
 <view class='form-box'>
   <view class='item-box'>
     <label>收件人：</label>
-    <input type='text' class='text'></input>
+    <input disabled='{{paying}}' value="{{orderModle.recipientName}}" bindinput='inputRecipientName' type='text' class='text'></input>
   </view>
    <view class='item-box'>
     <label>手机号：</label>
-     <input type='text' class='text'></input>
+     <input disabled='{{paying}}' value="{{orderModle.recipientPhoneNo}}" bindinput='inputRecipientPhoneNo' type='text' class='text'></input>
   </view>
    <view class='item-box'>
     <label>地址：</label>
-    <input type='text' class='text'></input>
+    <input disabled='{{paying}}' value="{{orderModle.recipientAddrDetail}}" bindinput='inputRecipientAddrDetail' type='text' class='text'></input>
   </view>
 </view>
-<button class='pay-bnt'>立即购买</button>
+
+<button wx:if="{{product.resId}}" class='pay-bnt' bindtap='toBuy' disabled='{{paying}}' loading='{{paying}}'>立即购买</button>
