--- a/pages/my/my_set_edit/my_set_edit.wxml
+++ b/pages/my/my_set_edit/my_set_edit.wxml
@@ -2,11 +2,11 @@
 <view class='form-box'>
   <view class='item-box'>
     <label>姓名：</label>
-    <input type='text' class='text'></input>
+    <input type='text' class='text' value='{{member.realName}}' bindinput='inputRealName'></input>
   </view>
    <view class='item-box'>
     <label>手机号：</label>
-     <input type='text' class='text'></input>
+     <input type='text' class='text' value='{{member.phoneNo}}' bindinput='inputPhoneNo'></input>
   </view>
 </view>
-<button class='pay-bnt'>立即支付</button>
+<button bindtap='toSubmitForm' class='pay-bnt'>提交</button>
