--- a/pages/5s/5s_detail/5s_detail.wxml
+++ b/pages/5s/5s_detail/5s_detail.wxml
@@ -20,6 +20,7 @@
     longitude="{{fives.addrLng}}"
     latitude="{{fives.addrLat}}"
     markers="{{markers}}"
+    show-location="{{true}}"
     scale="18"
     style="width: 100%; height: 320rpx;"
   ></map>
