--- a/pages/my/my_index/my_index.wxml
+++ b/pages/my/my_index/my_index.wxml
@@ -1,18 +1,20 @@
 <view class='userinfo'>
+  <navigator hover-class="none" url='../my_set_edit/my_set_edit'>
     <image class='head-photo' src='{{member.headImgUrl}}' mode="scaleToFill"></image>
-  <view class='name'>{{member.userName}}</view>
+    <view class='name'>{{member.userName}}</view>
+  </navigator>
   <view class='tag'>
     <image wx:if='{{member.authenticationFlag}}' src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/my-1.png' mode="scaleToFill"></image>
     <image wx:if='{{member.memberFlag}}' src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/my-2.png' mode="scaleToFill"></image>
     <image wx:if='{{member.fivesFlag}}' src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/my-3.png' mode="scaleToFill"></image>
   </view>
   <view class='nav-box'>
-      <navigator class='n1' url='../my_sell/my_sell'>分销中心
+      <navigator hover-class="none" wx:if='{{member.memberFlag}}' class='n1' url='../my_sell/my_sell'>分销中心
         <view class='to'></view>
       </navigator>
-      <navigator class='n2' url='../my_order/my_order'>我的订单<view class='to'></view></navigator>
-      <navigator class='n3' url=''>关于我们 <view class='to'></view></navigator>
-      <navigator class='n4' >联系我们<text bindtap='makePhoneCall'>{{servicePhoneNo}}</text> <view class='to'></view></navigator>
+      <navigator hover-class="none" class='n2' url='../my_order/my_order'>我的订单<view class='to'></view></navigator>
+      <navigator hover-class="none" class='n3' url='../my_aboutus/my_aboutus'>关于我们 <view class='to'></view></navigator>
+      <navigator hover-class="none" class='n4' >联系我们<text bindtap='makePhoneCall'>{{servicePhoneNo}}</text> <view class='to'></view></navigator>
   </view>
 </view>
 
