--- a/pages/5s/5s_index/5s_index.wxml
+++ b/pages/5s/5s_index/5s_index.wxml
@@ -7,7 +7,7 @@
 >
   <block wx:for="{{banners}}" wx:key="resId">
     <swiper-item >
-      <image src="{{item.picUrl}}" mode="scaleToFill" class="slide-image" style='width:100%'/>
+      <image src="{{item.picUrl}}" bindtap='toBannerDetail' data-url="{{item.linkUrl}}" data-id="{{item.resId}}" mode="scaleToFill" class="slide-image" style='width:100%'/>
     </swiper-item>
   </block>
 </swiper>
