--- a/pages/course/course_index/course_index.wxss
+++ b/pages/course/course_index/course_index.wxss
@@ -49,8 +49,29 @@ white-space:nowrap;
  width: 336rpx;
 }
 
+.animation-show {
+  animation: show 1s ease;
+  animation-fill-mode: forwards;
+}
 
+.fisrt-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.35);
+  opacity: 1;
+  z-index: 99999999;
+}
 
-
-
-
+.toLoginBtn {
+  width: 420rpx;
+  background-color: #eb6100;
+  color: #fff;
+  font-size: 32rpx;
+  padding: 10rpx 0;
+}
