--- a/pages/tool/tool_pay/tool_pay.wxml
+++ b/pages/tool/tool_pay/tool_pay.wxml
@@ -1,7 +1,7 @@
 <view class='main-box'>
 
   <view class="info-box">
-    <image class='thumb'  mode="widthFix" src='{{product.coverPicUrl}}'></image>
+    <image class='thumb'  mode="scaleToFill" src='{{product.coverPicUrl}}'></image>
     <view class='name'>{{product.productName}}</view>
     <view class='desc'>{{product.productResume}}</view>
     <view class='price'>￥{{product.productPrice}}</view>
