--- a/pages/my/my_qrcode/my_qrcode.wxml
+++ b/pages/my/my_qrcode/my_qrcode.wxml
@@ -2,7 +2,7 @@
 
 <view class='main-box'>
     <view class='userinfo'>
-      <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/5s-2.png' mode="scaleToFill" class='head-photo'></image>
+      <image src='{{member.headImgUrl}}' mode="scaleToFill" class='head-photo'></image>
       <view class='title'>我正在白赚猫学习实战课程，挺不错的！</view>
     </view>
 
@@ -13,11 +13,11 @@
   interval="{{swiper.interval}}"
   duration="{{swiper.duration}}"
   current="{{swiper.current}}"
-  class='index_banner' style='height:600rpx;'
+  class='index_banner'
 >
-  <block wx:for="{{swiper.imgUrls}}">
+  <block wx:for="{{orders}}" wx:key="courseId">
     <swiper-item >
-      <image src="{{item}}" mode="widthFix" class="slide-image" style='width:100%'/>
+      <image src="{{item.coverPicUrl}}" mode="widthFix" class="slide-image" style='width:100%;'/>
     </swiper-item>
   </block>
 </swiper>
@@ -27,25 +27,13 @@
     </view>
     <view class='ctitle'>他们都在这里学习</view>
     <view class='userlist'>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_1.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_2.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_3.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_4.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_5.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_6.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_7.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_8.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_9.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_10.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_11.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_12.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_13.png' mode="scaleToFill" class='photo'></image>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_14.png' mode="scaleToFill" class='photo'></image>
+       <image wx:for="{{headPics}}" src='{{item}}' mode="scaleToFill" class='photo'></image>
+       <image wx:if="{{headPics.length === 13}}" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/head_14.png' mode="scaleToFill" class='photo'></image>
        <view style="clear:both;height:0"></view>
     </view>
 
     <view class='qrcode-box'>
-       <image src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/my_13.png' mode="scaleToFill" class='qrcode'></image>
+       <image src="{{courseQrUrl || '/img/gh_6f60c068a4be_258.jpg'}}" mode="scaleToFill" class='qrcode'></image>
        <view class='tag-box'>
         <view class='tag-1'>名师亲授</view>
         <view class='tag-2'>实战落地</view>
