--- a/pages/5s/5s_detail/5s_detail.wxml
+++ b/pages/5s/5s_detail/5s_detail.wxml
@@ -13,7 +13,7 @@
   </view>
 </view>
 <view class='article-box'>
-<view class='text' style='margin-bottom:30rpx;'>{{fives.fivesLeadUserPhoneNo}}</view>
+<view class='text' style='margin-bottom:30rpx;'>{{fives.fivesLeadSynopsis}}</view>
   <!-- <image class='thumb' mode="widthFix" src='https://bzm.oss-cn-beijing.aliyuncs.com/baizhuanmao/5s-10.png'></image> -->
   <map
     id="fivesmap"
@@ -24,6 +24,12 @@
     scale="18"
     style="width: 100%; height: 320rpx;"
   ></map>
+  <view  style='margin-top:30rpx;'>
+    <view class='map' style='float:right;margin-top:14rpx;' catchtap='openLocation' data-name='{{fives.fivesName}}' data-address='{{fives.addrDetail}}' data-lng='{{fives.addrLng}}' data-lat='{{fives.addrLat}}'>导航</view>
+    <view class='text'>{{fives.addrDetail}}</view>
+    <view class='text' wx:if="{{'附近' != fives.distance}}">距您大约有{{fives.distance}}</view>
+    <view class='text' wx:else>位置在您附近</view>
+  </view>
 </view>
 
 <view style='height:20rpx; background:#f4f4f4;'></view>
